--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_geekbrains"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_geekbrains_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GettingToKnowAndroidGeekBrainsJava">
         <activity android:name=".MainActivity">
@@ -16,8 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity2"/>
-        <activity android:name=".MainActivity3"/>
+        <activity android:name=".lesson1.MainActivity1"/>
+        <activity android:name=".lesson1.MainActivity2"/>
+        <activity android:name=".lesson1.MainActivity3"/>
+        <activity android:name=".lesson2.CalculatorActivity"/>
     </application>
 
 </manifest>
