[ADDED] CalculatorActivity2.java, Model Calculator

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".lesson1.MainActivity2"/>
         <activity android:name=".lesson1.MainActivity3"/>
         <activity android:name=".lesson2.CalculatorActivity"/>
+        <activity android:name=".lesson3.CalculatorActivity2"/>
     </application>
 
 </manifest>
