--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_geekbrains_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GettingToKnowAndroidGeekBrainsJava">
+        android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +21,7 @@
         <activity android:name=".lesson1.MainActivity3"/>
         <activity android:name=".lesson2.CalculatorActivity"/>
         <activity android:name=".lesson3.CalculatorActivity2"/>
+        <activity android:name=".lesson4.CalculatorActivity3"/>
     </application>
 
 </manifest>
