--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.gettingtoknowandroidgeekbrainsjava">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_geekbrains"
@@ -11,6 +13,12 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".lesson7.NavigationNoteBookActivity"
+            android:label="@string/title_activity_navigation_note_book"
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+        <activity
+            android:name=".lesson8.ui.NavigationNoteBookActivity2"
             android:label="@string/title_activity_navigation_note_book"
             android:theme="@style/AppTheme.NoActionBar">
 
